# real-time-financial-data

./: README.md  example.env  pyproject.toml  requirements.txt
app/: consumer.py  db.py  models.py  producer.py
config/: settings.py
docker/: Dockerfile  docker-compose.yml  init_db.sql
