[tool.poetry]
name = "real-time-financial-data"
version = "0.1.0"
description = ""
authors = ["Lim Zheng Yang <zhengyanglim057@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "2.0.2"
yfinance = "0.2.26"
SQLAlchemy = "2.0.19"
psycopg2-binary = "2.9.11"
pandas = "2.1.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
